# cuda-iris-matcher

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  benchmark  benchmark.cu  dot_product.cu  iris.cu  iris_binding.cpp  iris_binding.cu  iris_params.h  pyproject.toml  run_tests.sh  setup.py  test_iris.py  tune_blocks.sh
benchmarking/: __init__.py  benchmark.py  benchmark_dot_product.py  benchmark_dot_sharding.py  benchmark_hd_max_pairs.py
docs/: generate.py
docs/api/: cuda_iris_matcher.html  cuda_iris_matcher.md  index.html  search.js
src/cuda_iris_matcher/: __init__.py  _jit_compile.py  ops.py  packing.py  sampling.py  sharding.py
src/cuda_iris_matcher/csrc/: dot_product.cu  iris.cu
src/iris_hamming/: __init__.py  ops.py  py.typed
tests/: test_correctness.py  utils.py
tests/python_tests/: test_correctness.py  test_dot_product.py  test_labeling.py  test_sampling.py  test_sharding.py
