[build-system]
# No torch needed at build time - CUDA extension is compiled via JIT at runtime
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-iris-matcher"
version = "0.1.0"
description = "CUDA/TensorCore masked hamming distance for IrisCode (PyTorch extension)"
readme = "README.md"
requires-python = ">=3.9"
# Runtime dependencies - wide version range for flexibility
# ninja is required for JIT compilation of CUDA extension
dependencies = ["numpy", "torch>=2.0.0", "ninja"]

[project.optional-dependencies]
dev = ["pytest", "pdoc"]
docs = ["pdoc"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Include CUDA source files as package data for JIT compilation
[tool.setuptools.package-data]
"cuda_iris_matcher" = ["csrc/*.cu", "csrc/*.h", "csrc/*.cuh"]

[tool.pdoc]
docformat = "google"
